# p3dx_TFG_uc3m

./: .gitmodules  README.md
p3dx_mb/: CMakeLists.txt  package.xml
p3dx_mb/main/: endurance_test.launch  locations.txt
p3dx_mb/navigation/: global_navigation_p3dx.launch
p3dx_mb/navigation/p3dx_config/: base_local_planner_params.yaml  costmap_common_params_p3at.yaml  global_costmap_params.yaml  local_costmap_params.yaml
p3dx_mb/sensors/: pioneer3dx-kinect.launch  pioneer3dx-rosaria.launch
p3dx_mb/src/: endurance_test.py
p3dx_nav/: CMakeLists.txt  package.xml
p3dx_nav/include/: Move_base_mov.h  Movimiento.h  Nav_waypoints.h
p3dx_nav/launch/: Mapping2.launch  mapping.launch  mapping_real_kinect.launch  mapping_real_kinect_adjusted.launch  p3dx_arch.launch  p3dx_arch_real.launch  p3dx_arch_real_only_mapping.launch  p3dx_rosaria_real.launch  p3dx_rosaria_sim.launch  p3dx_rviz.launch  p3dx_teleop.launch
p3dx_nav/msg/: Sensors.msg
p3dx_nav/rviz_displays/: mapping.rviz  move.rviz  p3dx.rviz  rviz_kinect_2.rviz
p3dx_nav/scripts_environment/: start_desk_p3dx.sh  start_pi_p3dx.sh
p3dx_nav/src/: Move_base_mov.cpp  Movimiento_basico.cpp  Nav_waypoints.cpp  enable_motors.cpp  listener.cpp  p3dx_client.cpp  p3dx_sensors.cpp  p3dx_server.cpp  teleop.cpp
p3dx_nav/srv/: ServerClientPelea.srv
