<package>
  <name>p3dx_mb</name>
  <version>1.0.0</version>
  <description>
  This package provides p3dx move base navigation
  </description>
  <maintainer email="100330413@alumnos.uc3m.es">Maintainer</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>tf</run_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
</package>
