<?xml version="1.0"?>
<!-- %Tag(FULLTEXT,-1)% -->
<package>
  <!-- %Tag(NAME)% -->
  <name>p3dx_nav</name>
  <!-- %EndTag(NAME)% -->
  <!-- %Tag(VERSION)% -->
  <version>0.1.0</version>
  <!-- %EndTag(VERSION)% -->
  <!-- %Tag(DESC)% -->
  <description>p3dx Navigation package - Pelea</description>
  <!-- %EndTag(DESC)% -->

  <!-- %Tag(MAINTAINER)% -->
  <maintainer email="100330413@alumnos.uc3m.es">100330413</maintainer>
  <!-- %EndTag(MAINTAINER)% -->
  <!-- %Tag(LICENSE)% -->
  <license>BSD</license>
  <!-- %EndTag(LICENSE)% -->
  <!-- %Tag(URLS)% -->
  <!-- <url type="website">http://wiki.ros.org/beginner_tutorials</url> -->
  <!-- %EndTag(URLS)% -->
  <!-- %Tag(AUTHORS)% -->
  <author email="100330413@alumnos.uc3m.es">100330413</author>
  <!-- %EndTag(AUTHORS)% -->

  <!-- %Tag(DEPS)% -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosaria</build_depend>
  <build_depend>geometry_msgs</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <!-- %EndTag(DEPS)% -->

  <!-- %Tag(EXPORT)% -->
  <!-- %EndTag(EXPORT)% -->
</package>
<!-- %EndTag(FULLTEXT)% -->
